adding href to tags 'a'

--- a/first/index.html
+++ b/first/index.html
@@ -11,8 +11,8 @@
     <p>YOUTUBE</p>
     <a href="https://www.youtube.com/">THIS</a>
     <div>
-        <a href="#">НУМЕР ТЕЛЕФОНА</a>
-        <a href="#">ГУД ПОЧТА</a>
+        <a href="https://www.deepl.com/translator#ru/en/">НУМЕР ТЕЛЕФОНА</a>
+        <a href="https://www.youtube.com/">ГУД ПОЧТА</a>
         <dl>
             <dt>DEEPL</dt>
             <dd>онлайн-переводчик, работающий на основе машинного перевода. Запущен в работу компанией «DeepL GmbH» из Кёльна в августе 2017 года. Сервис позволяет переводить в более чем 700 языковых парах на основе 31 языков.</dd>
